<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/keypad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/applicationWhite">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/general.distance.xxsmall"
        android:background="@drawable/gradient_shadow" />

    <TableRow
        android:layout_marginStart="@dimen/general.distance.xxsmall"
        android:layout_marginEnd="@dimen/general.distance.xxsmall"
        android:layout_weight="1">

        <Button
            android:id="@+id/button1"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.1" />

        <Button
            android:id="@+id/button2"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.2" />

        <Button
            android:id="@+id/button3"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.3" />

    </TableRow>

    <TableRow
        android:layout_marginStart="@dimen/general.distance.xxsmall"
        android:layout_marginEnd="@dimen/general.distance.xxsmall"
        android:layout_weight="1">

        <Button
            android:id="@+id/button4"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.4" />

        <Button
            android:id="@+id/button5"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.5" />

        <Button
            android:id="@+id/button6"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.6" />

    </TableRow>

    <TableRow
        android:layout_marginStart="@dimen/general.distance.xxsmall"
        android:layout_marginEnd="@dimen/general.distance.xxsmall"
        android:layout_weight="1">

        <Button
            android:id="@+id/button7"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.7" />

        <Button
            android:id="@+id/button8"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.8" />

        <Button
            android:id="@+id/button9"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.9" />

    </TableRow>

    <TableRow
        android:layout_marginStart="@dimen/general.distance.xxsmall"
        android:layout_marginEnd="@dimen/general.distance.xxsmall"
        android:layout_marginBottom="@dimen/general.distance.xxsmall"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/buttonDelete"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_delete"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/button0"
            style="@style/Dial.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pin.button.0" />

        <Button
            android:id="@+id/buttonAction"
            style="@style/Parental.Keypad.Next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="Next" />

    </TableRow>
</TableLayout>