<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.aptatek.pkulab.widget.HeaderView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general.distance.mini"
        android:layout_marginTop="@dimen/connect.permissions.top.margin"
        android:layout_marginEnd="@dimen/general.distance.mini"
        app:layout_constraintBottom_toTopOf="@+id/permissionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:subTitleText="@string/connect.permission.message"
        app:titleText="@string/connect.permission.title" />

    <Button
        android:id="@+id/permissionButton"
        style="@style/Grey.Settings.Button.Big"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>